--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ xcuserdata/
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
+*.xcuserstate
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
+profile/
 DerivedData/
 *.moved-aside
 *.pbxuser
@@ -88,3 +90,9 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# Bundler
+.bundle
+
+# Mac OS
+.DS_Store
